K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  namespace: weather-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: thestart.today
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-app
                port:
                  number: 80
